--- a/app/views/member/members/show.html.erb
+++ b/app/views/member/members/show.html.erb
@@ -1,1 +1,14 @@
-<h2>text</h2>
+<h2>マイページ</h2>
+
+<h3>登録情報</h3>
+
+<table>
+	<tr>
+		<th>氏名</th>
+		<td></td>
+	</tr>
+</table>
+
+<h3>配送先</h3>
+
+<h3>注文履歴</h3>
