--- a/app/views/member/members/edit.html.erb
+++ b/app/views/member/members/edit.html.erb
@@ -1,1 +1,49 @@
-<h2>text</h2>
+<h2>登録情報編集</h2>
+
+<%= form_for(@member) do |f| %>
+  <!--エラーメッセージ-->
+
+  <div class="field">
+    <%= f.label :first_name, "(姓)" %>
+    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :last_name, "(名)" %>
+    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :first_name_kana, "(セイ)" %>
+    <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :last_name_kana, "(メイ)" %>
+    <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :email, "メールアドレス" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :postal_code, "郵便番号(ハイフンなし)" %>
+    <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :address, "住所" %>
+    <%= f.text_field :address, autofocus: true, autocomplete: "address" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :telephone, "電話番号(ハイフンなし)" %>
+    <%= f.text_field :telephone, autofocus: true, autocomplete: "telephone" %>
+  </div>
+
+  <div class="actions">
+    <%= f.submit "編集内容を保存する" %>
+  </div>
+<% end %>
