--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,6 +1,8 @@
 <h1>実装頑張ろう！！</h1>
 
-<% if member_signed_in? %>
+<% if admin_signed_in? %>
+<h2>なに勝手に管理者でログインしてるの？</h2>
+<% elsif member_signed_in? %>
 <h2>今はログイン中だよ</h2>
 <% else %>
 <h2>まだログインしてないよ</h2>
