--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,10 +5,21 @@
     </nav>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <% if member_signed_in? %>
-        　<li><%= link_to ' Logout', destroy_member_session_path, method: :delete %></li>
+        <% if admin_signed_in? %>
+          <li><%= link_to "商品一覧", admin_products_path %></li>
+          <li><%= link_to "会員一覧", admin_members_path %></li>
+          <li><%= link_to "注文履歴一覧", admin_orders_path %></li>
+          <li><%= link_to "ジャンル一覧", admin_genres_path %></li>
+          <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete %></li>
+        <% elsif member_signed_in? %>
+        　<li><%= link_to "マイページ", member_path(current_member) %></li>
+          <li><%= link_to "商品一覧", products_path %></li>
+          <li><%= link_to "カート", cart_products_path %></li>
+          <li><%= link_to "ログアウト", destroy_member_session_path, method: :delete %></li>
         <% else %>
+          <li><%= link_to ' sign up(admin)', new_admin_registration_path %></li>
           <li><%= link_to ' sign up', new_member_registration_path %></li>
+          <li><%= link_to ' Login(admin)', new_admin_session_path %></li>
           <li><%= link_to ' Login', new_member_session_path %></li>
         <% end %>
       </ul>
