--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,6 +1,6 @@
 <h1>商品一覧</h1>
 
-
+<%= link_to '', new_admin_product_path, class: "btn btn-default btn-circle btn-lg glyphicon glyphicon-plus" %>
 <table class="table">
     <tr>
         <th>商品ID</th>
