--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,6 +1,6 @@
 <h1>new</h1>
 
-<%= form_for @product do |f| %>
+<%= form_for @product, url: admin_products_path, method: :post, class: "form-control" do |f| %>
  
 <#%= f.attachment_field :image, class: "image" %>
 
@@ -10,8 +10,11 @@
    <h4>商品説明</4>
    <%= f.text_area :introduction, class:"form-control" %>
 
+   #<h4>商品ジャンル</4>
+   <#%= f.select :genre class:"form-control" %>
+
    <h4>税抜価格</h4>
    <%= f.text_field :price, class:"form-control" %>円
 
-   <%= f.submit "", class:"btn btn-lg btn-block btn-base-1 mt-20" %>
+   <%= f.submit "新規登録", class:"btn btn-lg btn-block btn-base-1 mt-20" %>
 <% end %>
