--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,4 +1,33 @@
-<h1>ジャンル</h1>
+<h1>ジャンル一覧</h1>
 
+    <%= form_for(@genre, url:admin_genres_path) do |f| %>
 
-<%= form_for @genre
+      <div class="form-group">
+         <p>ジャンル追加</p>
+         <%= f.text_field :name %>
+         <p>有効 <%= f.radio_button :is_valid, true %> </p>
+         <p> 無効 <%= f.radio_button :is_valid, false %> </p>
+         <%= f.submit '追加', class:"btn btn-info btn-md" %>
+      </div>
+<% end %>
+
+    <table class="table">
+        <tr>
+           <th>商品ID</th>
+           <th></th>
+        </tr>
+        <% @genres.each do |genre| %>
+            <tr>
+                <td> <%= genre.name %> </td>
+
+                <% if genre.is_valid == true %>
+                <td> 有効 </td>
+                <% else %>
+                <td> 無効 </td>
+                <% end %>
+                <td> <%= link_to "編集する", edit_admin_genre_path(genre), class: "btn btn-primary btn-sm" %></td>
+            </tr>
+        <% end %>
+    
+    </table>
+
