--- a/app/views/admin/members/edit.html.erb
+++ b/app/views/admin/members/edit.html.erb
@@ -1,8 +1,8 @@
 <h1>admin::members#edit</h1>
 <h4><%= @member.last_name %><%= @member.first_name %>さんの会員情報編集</h4>
+ <%= form_for(@member, url:admin_member_path, method: :patch) do |f| %>
 <table>
     <tbody>
-    <%= form_for(@member, url: admin_member_path(@member.id)) do |f| %>
         <tr>
         <th>会員ID</th>
         <td><%= @member.id %></td>
@@ -51,8 +51,8 @@
         </tr>
 
         <tr>
-        <th><%= f.submit '変更を保存する',class: "btn btn-primary"%></th>
+        <th><%= f.submit '変更を保存する' %></th>
         </tr>
-    <% end %>
     </tbody>
 </table>
+<% end %>
