--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -10,8 +10,8 @@
    <h4>商品説明</4>
    <%= f.text_area :introduction, class:"form-control" %>
 
-   #<h4>商品ジャンル</4>
-   <%= f.collection_select :genre_id, Genre.all, :id, :name　%>
+   <h4>商品ジャンル</h4>
+   <%= f.collection_select :genre_id, Genre.all, :id, :name %>
 
    <h4>税抜価格</h4>
    <%= f.text_field :price, class:"form-control" %>円
