--- a/app/views/member/members/edit.html.erb
+++ b/app/views/member/members/edit.html.erb
@@ -3,7 +3,7 @@
 <%= form_for(@member) do |f| %>
   <!--エラーメッセージ-->
 
-  <table>
+  <table class="table">
     <tr>
       <td>名前</td>
       <td>(姓)</td>
