--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_for @product, url: admin_products_path, method: :post, class: "form-control" do |f| %>
  
-<#%= f.attachment_field :image, class: "image" %>
+   <%= f.attachment_field :image, class: "image" %>
 
    <h4>title</h4>
    <%= f.text_field :name, class:"form-control" %>
