--- a/app/views/member/products/index.html.erb
+++ b/app/views/member/products/index.html.erb
@@ -1,3 +1,57 @@
-<h1>商品一覧</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-xs-2">
+			<%= render 'products/list', genres: @genres %>
+		</div>
 
-<% @products.each do
+		<div class="col-xs-10">
+			
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<nav aria-label="ページャー">
+  <ul class="pagination justify-content-center">
+    <li>
+      <a class="btn page-link rounded-pill" href="#">&larr; 前</a>
+    </li>
+    <li class="mx-2">
+      <a class="btn page-link rounded-pill" href="#">現在</a>
+    </li>
+    <li>
+      <a class="btn page-link rounded-pill" href="#">次 &rarr;</a>
+    </li>
+  </ul>
+</nav>
