--- a/app/views/member/cart_products/index.html.erb
+++ b/app/views/member/cart_products/index.html.erb
@@ -1,1 +1,28 @@
-<h2>text</h2>
+<div class="container">
+	<div class="row">
+		<div class="col-xs-6"></div>
+
+
+<table class="table">
+	<thead>
+		<tr>
+			<th>商品名</th>
+			<th>単価</th>
+			<th>数量</th>
+			<th>小計</th>
+			<th></th>
+		</tr>
+	</thead>
+</table>
+
+<tbody>
+  <% @cart_products.each do |cart_product| %>
+	<tr>
+		<td>
+			<% attachment_image_tag %>
+		</td>
+		<td></td>
+		<td></td>
+	</tr>
+</tbody>
+
