[Add]password-edit(member)

--- a/app/views/member/members/show.html.erb
+++ b/app/views/member/members/show.html.erb
@@ -2,7 +2,7 @@
 
 <h3>登録情報</h3>
 <%= link_to "編集する", edit_member_path(@member), class: "btn btn-default" %>
-<%= link_to "パスワードを変更する", destinations_path, class: "btn btn-default" %>
+<%= link_to "パスワードを変更する", edit_member_registration_path, class: "btn btn-default" %>
 
 <table class="table">
 	<tr>
