--- a/app/views/member/products/index.html.erb
+++ b/app/views/member/products/index.html.erb
@@ -1,12 +1,27 @@
 <div class="container">
-	<div class="row">
-		<div class="col-xs-2">
-			<%= render 'products/list', genres: @genres %>
-		</div>
-
-		<div class="col-xs-10">
-			
-
+  <div class="row">
+      <div class="col-xs-2">
+        <h2>後回し</h2>
+      </div>
+    <div class="col-xs-10">
+      <h3>商品一覧<span>（全<%= @quantity %>件）</span></h3>
+      <% @products.each do |product| %>
+        <div class="col-xs-3 text-center ">
+            <p>画像入る予定</p>
+            <%= product.name %><br>
+            <% if product.is_valid == true %>
+                <%= product.price %>円
+            <% end %>
+            <% if product.is_valid == true %>
+                販売中
+            <% else %>
+                売切れ
+            <% end %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
 
 
 
