--- a/app/views/member/members/top.html.erb
+++ b/app/views/member/members/top.html.erb
@@ -1,5 +1,49 @@
-<h2>ようこそ、NaganoCakeへ！</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-2">
+            あとでやるね
+        </div>
+        <div class="col-xs-10">
+            <div>
+                <div>
+                    <p>ようこそ、ながのCAKEへ！</p>
+                    <p>このサイトは、ケーキ販売のECサイトになります。</p>
+                    <p>会員でない方も商品の閲覧はできますが、</p>
+                    <p>購入には会員登録が必要になります。</p>
+                </div>
+            </div>
 
-<h2>ジャンル検索</h2>
+            <div class="row">
+                <div>
+                    <h3><strong>オススメ商品</strong></h3>
+                </div>
+            </div>
 
-<h2>おススメ商品</h2>
+            <div class="row">
+                <% @products.shuffle.first(4).each do |product| %>
+                    <div class="col-xs-3 cakes">
+                        <%= link_to product_path(product.id) do %>
+                            <div>
+                                <p>あとで画像</p><br>
+                            </div>
+                                <%= product.name %><br>
+                            <!-- 売り切れの場合値段を表示しない -->
+                                <% if product.is_valid == true %>
+                                    ¥<%= product.price %>
+                                <% end %>
+                                <% if product.is_valid == true %>
+                                    販売中
+                                <% else %>
+                                    売切れ
+                                <% end %>
+                        <% end %>
+                    </div>
+                <% end %>
+            </div>
+            <br>
+            <div>
+                <%= link_to "もっと見る", products_path %>
+            </div>
+        </div>
+    </div>
+</div>
