--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
         <% elsif member_signed_in? %>
         　<li><%= link_to "マイページ", member_path(current_member) %></li>
           <li><%= link_to "商品一覧", products_path %></li>
-          <li><%= link_to "カート", '#' %></li>
+          <li><%= link_to "カート", cart_products_path %></li>
           <li><%= link_to "ログアウト", destroy_member_session_path, method: :delete %></li>
         <% else %>
           <li><%= link_to ' sign up(admin)', new_admin_registration_path %></li>
