--- a/app/views/member/cart_products/index.html.erb
+++ b/app/views/member/cart_products/index.html.erb
@@ -1,28 +1,68 @@
 <div class="container">
-	<div class="row">
-		<div class="col-xs-6"></div>
+    <div class="row">
+        <div>
+        <h2>　ショッピングカート　</h2>
+            <div class="btn-box text-right">
+                <%= link_to "カートを空にする", all_destroy_cart_products_path, method: :delete, class:"btn btn-danger" %>
+            </div>
+            <br>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>商品名</th>
+                            <th>単価（税込）</th>
+                            <th>数量</th>
+                            <th>小計</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% @cart_products.each do |cart_product| %>
+                            <tr>
+                                <td>
+                                    <p>画像が入る</p>
+                                    <%= cart_product.product.name %>
+                                </td>
+                                <td>
+                                    <%= number_to_currency(cart_product.product.price*1.1, :format => "%u%n", :unit => "￥", :precision => 0) %>(税込み)
+                                </td>
+                                <td>
+                                    <%= form_for(cart_product) do |f| %>
+                                            <%= f.number_field :quantity, min:1 %>
+                                            <%= f.submit "変更", class: "btn btn-primary" %>
+                                    <% end %>
+                                </td>
+                                <td>
+                                    <%= number_to_currency(cart_product.product.price*cart_product.quantity*1.1, :format => "%u%n", :unit => "￥", :precision => 0) %>円
+                                </td>
+                                <td>
+                                    <%= link_to "削除する", cart_product_path(cart_product.id), method: :delete, class: "btn btn-danger" %>
+                                </td>
+                            </tr>
+                        <% end %>
+                    </tbody>
+                </table>
+            <div class="cart-total-table row" >
+                <div class="col-xs-8"><%= link_to "買い物を続ける", products_path, class: "btn btn-primary"  %></div>
+                <div class="col-xs-4">
+                    <table>
+                        <tbody>
+                            <th>合計金額</th>
+                            <td>
+                                <%= number_to_currency(@cart_products.map{ |cp| (cp.product.price*cp.quantity*1.1).round }.sum, :format => "%u%n", :unit => "￥", :precision => 0) %>
+                            </td>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        <% if current_member.cart_products.present? %>
+        <div class="col-xs-4 col-xs-offset-4">
+            <%= link_to "情報入力に進む", '#', class:"btn btn-success" %>
+        </div>
+        <% end %>
+        </div>
+    </div>
+</div>
 
 
-<table class="table">
-	<thead>
-		<tr>
-			<th>商品名</th>
-			<th>単価</th>
-			<th>数量</th>
-			<th>小計</th>
-			<th></th>
-		</tr>
-	</thead>
-</table>
-
-<tbody>
-  <% @cart_products.each do |cart_product| %>
-	<tr>
-		<td>
-			<% attachment_image_tag %>
-		</td>
-		<td></td>
-		<td></td>
-	</tr>
-</tbody>
 
