--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,3 +21,12 @@
 body{
 	padding-top:50px;
 }
+
+.btn-plus {
+	border-radius: 50%;
+    padding: 5px 10px;
+    margin: 1%;
+    line-height: 40px;
+    color: #9E9E9E;
+    font-size: 30px;
+}
