--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,5 +1,7 @@
 <h1>商品編集</h1>
 
+<%= render 'layouts/error.message', model: @product %>
+
 <%= form_for @product, url: admin_product_path, method: :patch, class: "form-control" do |f| %>
 
  
