--- a/app/views/member/cart_products/index.html.erb
+++ b/app/views/member/cart_products/index.html.erb
@@ -57,7 +57,7 @@
             </div>
         <% if current_member.cart_products.present? %>
         <div class="col-xs-4 col-xs-offset-4">
-            <%= link_to "情報入力に進む", '#', class:"btn btn-success" %>
+            <%= link_to "情報入力に進む", new_order_path, class:"btn btn-success" %>
         </div>
         <% end %>
         </div>
