--- a/app/views/member/members/quit.html.erb
+++ b/app/views/member/members/quit.html.erb
@@ -1,8 +1,10 @@
-<h2>本当に退会しますか？</h2>
+<div class="col-xs-12 text-center">
+	<h2>本当に退会しますか？</h2>
 
-<h3>退会すると、会員登録情報や<br>
-これまでの購入履歴が閲覧できなくなります。<br>
-退会する場合は、「退会する」をクリックしてください。<br></h3>
+	<h3>退会すると、会員登録情報や<br>
+	これまでの購入履歴が閲覧できなくなります。<br>
+	退会する場合は、「退会する」をクリックしてください。<br></h3>
 
-<%= link_to "退会しない", member_path(@member) %>
-<%= link_to "退会する", hide_member_path(@member), method: :delete %>
+	<%= link_to "　退会しない　", member_path(@member), class: "btn btn-success" %>
+	<%= link_to "　退会する　", hide_member_path(@member), method: :delete, class: "btn btn-danger" %>
+</div>
