view-admin-product-show,edit

--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -11,7 +11,7 @@
             <td> <%= f.text_field :name, class:"form-control" %> </td>
             <td>有効 <%= f.radio_button :is_valid, true %> </td>
             <td>無効 <%= f.radio_button :is_valid, false %> </td>
-            <td> <%= f.submit "変更を保存する", class:"btn btn-lg btn-block btn-base-1 mt-20" %> </td>
+            <td> <%= f.submit "変更を保存する", class:"btn btn-primary btn-sm" %> </td>
         </tr>
     </table>
     
