--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -1,20 +1,42 @@
 <div class="container">
     <div class="row">
-        <div class="col-xs-3">
+
+        <div class="col-xs-4">
+        <h1>商品詳細</h1>
+        <%= attachment_image_tag(@product, :image, size: "300x240") %>
         </div>
+
+        <div class="col-xs-5">
+          <table class="table">
+            <tr>
+              <th>商品名</th>
+              <td>　<%= @product.name %>　<td>
+            </tr>
+            <tr>
+              <th>商品紹介</th>
+              <td> <%= @product.introduction %>　<td>
+            </tr>
+            <tr>
+              <th>ジャンル</th>
+              <td>　<%= @product.genre.name %>　<td>
+            </tr>
+            <tr>
+              <th>税込価格(税抜価格)</th>
+              <td> <%= number_to_currency(@product.price*1.1, :format => "%u%n", :unit => "￥", :precision => 0) %>円 (<%= @product.price %>)円<td>
+            </tr>
+            <tr>
+              <th>販売ステータス</th>
+              <% if @product.is_valid == true %>
+              <td>  販売中 </td>
+              <% else %>
+              <td> 販売停止中 </td>
+              <% end %>
+            </tr>
+          </table>
+        </div>
+
         <div class="col-xs-3">
-        <p> <%= attachment_image_tag(@product, :image, size: "300x300") %></p>
-        <p> <%= @product.name %> </p>
-        <p> <%= @product.introduction %> </p>
-        <p> <%= @product.genre.name %> </p>
-        <p> <%= @product.price %> </p>
-        <p> <%= @product.price %> </p>
-        <% if @product.is_valid == true %>
-          <p>  販売中 </p>
-        <% else %>
-           <p> 販売停止中 </p>
-        <% end %>
-       <p> <%= link_to "編集する", edit_admin_product_path(@product), class: "btn btn-primary btn-sm" %> </p>
+          <p> <%= link_to "編集する", edit_admin_product_path(@product), class: "btn btn-primary btn-sm" %> </p>
         </div>
     </div>
 </div>
