ページネーション追加追加

--- a/app/views/admin/members/index.html.erb
+++ b/app/views/admin/members/index.html.erb
@@ -21,3 +21,12 @@
         <tr>
     <% end %>
 </table>
+
+
+ <div class="row">
+    <div class="col-xs-5">
+  </div>
+  <div class="col-xs-6">
+     <%= paginate @members %>
+    </div>
+  </div>
