--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -40,3 +40,11 @@
 </div>
 
 <div class="col-xs-2"></div>
+
+  <div class="row">
+    <div class="col-xs-5">
+  </div>
+  <div class="col-xs-6">
+     <%= paginate @products %>
+    </div>
+  </div>
