--- a/app/views/member/products/index.html.erb
+++ b/app/views/member/products/index.html.erb
@@ -1,72 +1,35 @@
-<div class="container">
-  <div class="row">
-      <div class="col-xs-2">
-        <h2>後回し</h2>
-      </div>
-    <div class="col-xs-10">
-      <h3>商品一覧<span>（全<%= @quantity %>件）</span></h3>
-      <% @products.each do |product| %>
-        <div class="col-xs-3 text-center ">
-            <p>画像入る予定</p>
-            <%= product.name %><br>
-            <% if product.is_valid == true %>
-                <%= product.price %>円
-            <% end %>
-            <% if product.is_valid == true %>
-                販売中
-            <% else %>
-                売切れ
-            <% end %>
+    <div class="col-xs-2">
+        <h2>ジャンル検索</h2>
+    </div>
+
+        <div class="col-xs-10">
+
+          <h3>商品一覧<span>（全<%= @quantity %>件）</span></h3>
+          <% @products.each do |product| %>
+
+            <div class="col-xs-3 text-center ">
+                <p>画像入る予定</p>
+                <%= product.name %><br>
+                <% if product.is_valid == true %>
+                    <%= product.price %>円
+                <% end %>
+
+                <% if product.is_valid == true %>
+                    販売中
+
+                <% else %>
+                    売切れ
+                <% end %>
+
+            </div>
+          <% end %>
         </div>
-      <% end %>
+
+
+  <div class="row">
+    <div class="col-xs-5">
+  </div>
+  <div class="col-xs-6">
+     <%= paginate @products %>
     </div>
   </div>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<nav aria-label="ページャー">
-  <ul class="pagination justify-content-center">
-    <li>
-      <a class="btn page-link rounded-pill" href="#">&larr; 前</a>
-    </li>
-    <li class="mx-2">
-      <a class="btn page-link rounded-pill" href="#">現在</a>
-    </li>
-    <li>
-      <a class="btn page-link rounded-pill" href="#">次 &rarr;</a>
-    </li>
-  </ul>
-</nav>
