サインアップ画面修正

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,6 +2,9 @@
   <div class="container">
     <nav class="nav navbar-nav navbar-left">
       <span class="header_title">NaganoCake</span>
+      <% if member_signed_in? %>
+        <span>ようこそ、<%= current_member.last_name %>さん！</span>
+      <% end %>
     </nav>
     <nav>
       <ul class="nav navbar-nav navbar-right">
@@ -17,10 +20,11 @@
           <li><%= link_to "カート", cart_products_path %></li>
           <li><%= link_to "ログアウト", destroy_member_session_path, method: :delete %></li>
         <% else %>
-          <li><%= link_to ' sign up(admin)', new_admin_registration_path %></li>
-          <li><%= link_to ' sign up', new_member_registration_path %></li>
-          <li><%= link_to ' Login(admin)', new_admin_session_path %></li>
-          <li><%= link_to ' Login', new_member_session_path %></li>
+          <li><%= link_to 'Login(admin)', new_admin_session_path %></li>
+          <!-- ↑消す -->
+          <li><%= link_to '商品一覧', products_path %></li>
+          <li><%= link_to '新規登録', new_member_registration_path %></li>
+          <li><%= link_to 'ログイン', new_member_session_path %></li>
         <% end %>
       </ul>
     </nav>
