--- a/app/views/member/destinations/edit.html.erb
+++ b/app/views/member/destinations/edit.html.erb
@@ -20,7 +20,7 @@
       <td>宛名</td>
       <td><%= f.text_field :receiver, autofocus: true, autocomplete: "receiver" %></td>
       <td></td>
-      <td><%= f.submit "編集する" %></td>
+      <td><%= f.submit "編集する", class: "btn btn-default" %></td>
     </tr>
   </table>
 
