--- a/app/views/member/members/show.html.erb
+++ b/app/views/member/members/show.html.erb
@@ -6,27 +6,27 @@
 
 <table class="table">
 	<tr>
-		<th>氏名</th>
-		<td><%= @member.last_name %> <%= @member.first_name %></td>
+		<th class="active col-xs-3">氏名</th>
+		<td class="col-xs-6"><%= @member.last_name %> <%= @member.first_name %></td>
 	</tr>
 	<tr>
-		<th>カナ</th>
+		<th class="active">カナ</th>
 		<td><%= @member.last_name_kana%> <%= @member.first_name_kana %></td>
 	</tr>
 	<tr>
-		<th>郵便番号</th>
+		<th class="active">郵便番号</th>
 		<td><%= @member.postal_code %></td>
 	</tr>
 	<tr>
-		<th>住所</th>
+		<th class="active">住所</th>
 		<td><%= @member.address %></td>
 	</tr>
 	<tr>
-		<th>電話番号</th>
+		<th class="active">電話番号</th>
 		<td><%= @member.telephone %></td>
 	</tr>
 	<tr>
-		<th>メールアドレス</th>
+		<th class="active">メールアドレス</th>
 		<td><%= @member.email %></td>
 	</tr>
 </table>
