--- a/app/views/members/registrations/new.html.erb
+++ b/app/views/members/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign up</h2>
+<h2>新規会員登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -35,7 +35,7 @@
     <tr>
       <td>住所</td>
       <td></td>
-      <td colspan="3"><%= f.text_field :address, autofocus: true, autocomplete: "address", class: "col-xs-12" %></td>
+      <td colspan="3"><%= f.text_field :address, autofocus: true, autocomplete: "address", class: "col-xs-10" %></td>
     </tr>
     <tr>
       <td>電話番号(ハイフンなし)</td>
@@ -44,10 +44,28 @@
       <td></td>
       <td></td>
     </tr>
+    <tr>
+      <td>パスワード(6文字以上)</td>
+      <td></td>
+      <td><%= f.password_field :password, autocomplete: "new-password" %></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>パスワード(確認用)</td>
+      <td></td>
+      <td><%= f.password_field :password_confirmation, autocomplete: "new-password" %></td>
+      <td></td>
+      <td></td>
+    </tr>
   </table>
 
-  <%= f.submit "Sign up" %>
+  <%= f.submit "新規登録", class: "btn btn-default" %>
 
 <% end %>
 
-<%= render "members/shared/links" %>
+<h2>既に登録済みの方</h2>
+
+<strong><%= link_to "こちら", new_session_path(resource_name) %></strong>　からログインしてください。
+
+<!-- <%= render "members/shared/links" %> -->
