--- a/app/views/member/products/index.html.erb
+++ b/app/views/member/products/index.html.erb
@@ -5,13 +5,22 @@
         <div class="col-xs-10">
 
           <h3>商品一覧<span>（全<%= @quantity %>件）</span></h3>
+
           <% @products.each do |product| %>
 
             <div class="col-xs-3 text-center ">
-                <p>画像入る予定</p>
-                <%= product.name %><br>
-                <% if product.is_valid == true %>
-                    <%= product.price %>円
+
+              <%= link_to product_path(product) do %>
+
+                <%= attachment_image_tag product, :image, :fill, 60, 60, fallback: "no_image.jpg" %>
+
+                <% end %><br>
+
+                <p><%= product.name %></p>
+
+                <p><% if product.is_valid == true %>
+                    <%= product.price %>円</p>
+
                 <% end %>
 
                 <% if product.is_valid == true %>
@@ -27,7 +36,7 @@
 
 
   <div class="row">
-    <div class="col-xs-5">
+    <div class="col-xs-6">
   </div>
   <div class="col-xs-6">
      <%= paginate @products %>
