--- a/app/views/admin/members/index.html.erb
+++ b/app/views/admin/members/index.html.erb
@@ -1,7 +1,5 @@
-<div class="row">
-  <div class="page-header">
-    <h1>会員一覧</h1>
-  </div>
+<div class="row page-header">
+  <h1>会員一覧</h1>
 </div>
 
 <div class="col-xs-10 table-responsive">
@@ -29,10 +27,9 @@
   </table>
 </div>
 
- <div class="row">
-    <div class="col-xs-5">
-  </div>
+<div class="row">
+  <div class="col-xs-5"></div>
   <div class="col-xs-6">
      <%= paginate @members %>
-    </div>
   </div>
+</div>
