--- a/app/views/admin/members/show.html.erb
+++ b/app/views/admin/members/show.html.erb
@@ -1,46 +1,51 @@
-<h3><%= @member.last_name%> <%= @member.first_name%> さんの会員詳細</h3>
-<div class="col-xs-12">
-    <table>
-        <thead></thead>
-        <tbody>
-            <tr>
-                <td><h5>顧客ID</h5></td>
-                <td>
-                    <%= @member.id %>
-                    <% if @member.is_deleted == false %>
-                        <span class= "label label-primary" >有効会員</span>
-                    <% else %>
-                        <span class= "label label-default" >退会済み</span>
-                    <% end %>
-                </td>
-            </tr>
-            <tr>
-                <td><h5>氏名</h5></td>
-                <td><%= "#{@member.last_name}　#{@member.first_name}" %></td>
-            </tr>
-            <tr>
-                <td><h5>フリガナ</h5></td>
-                <td><%= "#{@member.last_name_kana}　#{@member.first_name_kana}" %></td>
-            </tr>
-            <tr>
-                <td><h5>郵便番号</h5></td>
-                <td><%= @member.postal_code%></td>
-            </tr>
-            <tr>
-                <td><h5>住所</h5></td>
-                <td> <%= @member.address %> </td>
-            </tr>
-            <tr>
-                <td><h5>電話番号</h5></td>
-                <td><%= @member.telephone %></td>
-            </tr>
-            <tr>
-                <td><h5>メールアドレス</h5></td>
-                <td> <%= @member.email %></td>
-            </tr>
-        </tbody>
-        <tfoot></tfoot>
-    </table>
+<div class="row page-header">
+    <h3><%= @member.last_name%> <%= @member.first_name%> さんの会員詳細</h3>
+</div>
+
+<div class="row">
+    <div class="col-xs-12">
+        <table>
+            <thead></thead>
+            <tbody>
+                <tr>
+                    <td><h5>顧客ID</h5></td>
+                    <td>
+                        <%= @member.id %>
+                        <% if @member.is_deleted == false %>
+                            <span class= "label label-primary" >有効会員</span>
+                        <% else %>
+                            <span class= "label label-default" >退会済み</span>
+                        <% end %>
+                    </td>
+                </tr>
+                <tr>
+                    <td><h5>氏名</h5></td>
+                    <td><%= "#{@member.last_name}　#{@member.first_name}" %></td>
+                </tr>
+                <tr>
+                    <td><h5>フリガナ</h5></td>
+                    <td><%= "#{@member.last_name_kana}　#{@member.first_name_kana}" %></td>
+                </tr>
+                <tr>
+                    <td><h5>郵便番号</h5></td>
+                    <td><%= @member.postal_code%></td>
+                </tr>
+                <tr>
+                    <td><h5>住所</h5></td>
+                    <td> <%= @member.address %> </td>
+                </tr>
+                <tr>
+                    <td><h5>電話番号</h5></td>
+                    <td><%= @member.telephone %></td>
+                </tr>
+                <tr>
+                    <td><h5>メールアドレス</h5></td>
+                    <td> <%= @member.email %></td>
+                </tr>
+            </tbody>
+            <tfoot></tfoot>
+        </table>
+    </div>
 </div>
 
 <div class='row'>
