--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,13 @@
 
   <body>
     <%= render 'layouts/header' %>
+    <br>
     <div class="container">
         <p id="notice"><%= notice %></p>
 
         <%= yield %>
 
     </div>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
