--- a/app/views/member/members/top.html.erb
+++ b/app/views/member/members/top.html.erb
@@ -1,30 +1,31 @@
-<div class="container">
-    <div class="row">
-        <div class="col-xs-2">
-            あとでやるね
+<div class="row">
+    <div class="col-xs-2">
+        ジャンル検索
+    </div>
+    <div class="col-xs-10">
+        <div class="row">
+            <div class="col-xs-12 welcome">
+                <div class="welcome-message">
+                    <p>ようこそ、ながのCAKEへ！<br>
+                        このサイトは、ケーキ販売のECサイトになります。<br>
+                        会員でない方も商品の閲覧はできますが、<br>
+                        購入には会員登録が必要になります。
+                    </p>
+                </div>
+            </div>
         </div>
-        <div class="col-xs-10">
-            <div>
-                <div>
-                    <p>ようこそ、ながのCAKEへ！</p>
-                    <p>このサイトは、ケーキ販売のECサイトになります。</p>
-                    <p>会員でない方も商品の閲覧はできますが、</p>
-                    <p>購入には会員登録が必要になります。</p>
-                </div>
+
+        <div class="row">
+            <div class="col-xs-12">
+                <h3><strong>オススメ商品</strong></h3>
             </div>
 
-            <div class="row">
-                <div>
-                    <h3><strong>オススメ商品</strong></h3>
-                </div>
-            </div>
-
-            <div class="row">
+            <div class="Recommended">
                 <% @products.shuffle.first(4).each do |product| %>
                     <div class="col-xs-3 cakes">
                         <%= link_to product_path(product.id) do %>
                             <div>
-                                <p>あとで画像</p><br>
+                                <p><%= attachment_image_tag product, :image, :fill, 100, 100, fallback: "no_image.jpg" %></p><br>
                             </div>
                                 <%= product.name %><br>
                             <!-- 売り切れの場合値段を表示しない -->
@@ -41,7 +42,7 @@
                 <% end %>
             </div>
             <br>
-            <div>
+            <div class="text-right">
                 <%= link_to "もっと見る", products_path %>
             </div>
         </div>
