--- a/app/views/member/cart_products/index.html.erb
+++ b/app/views/member/cart_products/index.html.erb
@@ -43,7 +43,7 @@
                     </tbody>
                 </table>
             <div class="cart-total-table row" >
-                <div class="col-xs-8"><%= link_to "買い物を続ける", products_path, class: "btn btn-primary"  %></div>
+                <div class="col-xs-8"><%= link_to "買い物を続ける", root_path, class: "btn btn-primary"  %></div>
                 <div class="col-xs-4">
                     <table>
                         <tbody>
