--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -61,6 +61,6 @@
 <div class="row">
   <div class="col-xs-5"></div>
   <div class="col-xs-6">
-     <%= paginate @orders %>
+     <%= paginate @orders, params: { prev_path: @prev_path, member_id: @member_id} %>
    </div>
 </div>
