--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
         <% if admin_signed_in? %>
           <li><%= link_to "商品一覧", admin_products_path %></li>
           <li><%= link_to "会員一覧", admin_members_path %></li>
-          <li><%= link_to "注文履歴一覧", admin_orders_path %></li>
+          <li><%= link_to "注文履歴一覧", admin_orders_path(is_from_header: 1) %></li>
           <li><%= link_to "ジャンル一覧", admin_genres_path %></li>
           <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete %></li>
           <li>
