--- a/app/views/member/products/_list.html.erb
+++ b/app/views/member/products/_list.html.erb
@@ -1,16 +1,26 @@
 <div class="row">
 	<ul class="list-group">
-		<li class="list-group-item">ジャンル検索</li>
-		<li class="list-group-item">
+		<li class="list-group-item list-group-item-warning text-center"><h4>ジャンル検索</h4></li>
+
+		 <li class="list-group-item text-center">
 
 		  <% genres.each do |genre| %>
-             <li>
-				<%= link_to user_genre_path(genre.id) do %>
+             	<h5 class="panel-body">
+
+				<%= link_to products_path(genre.id) do %>
+
 				<%= genre.name %>
+
 				<% end %>
-             </li>
+
+			   </h5>
 		  <% end %>
 
 	    </li>
    </ul>
 </div>
+
+
+
+
+
