genre-view-product-controller

--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -13,8 +13,8 @@
 
     <table class="table">
         <tr>
-           <th>商品ID</th>
-           <th></th>
+           <th>ジャンル名</th>
+           <th>ジャンルステータス</th>
         </tr>
         <% @genres.each do |genre| %>
             <tr>
