--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,9 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
     <nav class="nav navbar-nav navbar-left">
-      <span class="header_title">NaganoCake</span>
+      <span class="header_title">
+        <%= link_to "NaganoCake", root_path %>
+      </span>
       <% if member_signed_in? %>
         <span>ようこそ、<%= current_member.last_name %>さん！</span>
       <% end %>
@@ -14,14 +16,6 @@
           <li><%= link_to "注文履歴一覧", admin_orders_path(is_from_header: 1) %></li>
           <li><%= link_to "ジャンル一覧", admin_genres_path %></li>
           <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete %></li>
-          <li>
-            <nav class="navbar navbar-light bg-light">
-              <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button type="submit" class="btn btn-outline-success my-2 my-sm-0">検索</button>
-              </form>
-            </nav>
-          </li>
         <% elsif member_signed_in? %>
         　<li><%= link_to "マイページ", member_path(current_member) %></li>
           <li><%= link_to "商品一覧", products_path %></li>
@@ -35,6 +29,15 @@
           <li><%= link_to 'ログイン', new_member_session_path %></li>
         <% end %>
       </ul>
+      <% if admin_signed_in? %>
+        <div class="input-group">
+            <%= text_field_tag :search, params[:search], placeholder: "Search", class: "form-control" %>
+            <span class="input-group-btn">
+                <%= button_tag "", :name => nil, class: "glyphicon glyphicon-search btn btn-primary" %>
+            </span>
+        </div>
+      <% else %>
+      <% end %>
     </nav>
   </div>
 </header>
