--- a/app/views/member/members/top.html.erb
+++ b/app/views/member/members/top.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-2">
-        ジャンル検索
+        <%= render 'member/products/list', genres: @genres %>
     </div>
     <div class="col-xs-10">
         <div class="row">
@@ -25,7 +25,7 @@
                     <div class="col-xs-3 cakes">
                         <%= link_to product_path(product.id) do %>
                             <div>
-                                <p><%= attachment_image_tag product, :image, :fill, 100, 100, fallback: "no_image.jpg" %></p><br>
+                                <p><%= attachment_image_tag @product, :image, size: '200x2000', fallback:"no_image.jpg",size:'200x200' %></p><br>
                             </div>
                                 <%= product.name %><br>
                             <!-- 売り切れの場合値段を表示しない -->
