--- a/app/views/member/products/_list.html.erb
+++ b/app/views/member/products/_list.html.erb
@@ -7,11 +7,8 @@
 		  <% genres.each do |genre| %>
              	<h5 class="panel-body">
 
-				<%= link_to products_path(genre.id) do %>
-
-				<%= genre.name %>
-
-				<% end %>
+             	<!-- ジャンル検索機能 -->
+             	<%= link_to genre.name, search_products_path(genre_name: "#{genre.name}"), method: :post %>
 
 			   </h5>
 		  <% end %>
