--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
-<footer class="footer navbar navbar-fixed-bottom navbar-inverse">
+<footer class="footer navbar navbar-fixed-bottom navbar-inverse" style="background-color:#3d2c26;color: #fff;">
   <div class="container">
     <nav class="text-center">
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right footer-title">
         <li>ご利用規約</li>
         <li>ご利用ガイド</li>
         <li>よくある質問</li>
