--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -5,8 +5,8 @@
       <div class="form-group">
          <p>ジャンル追加</p>
          <%= f.text_field :name %>
-         <p>有効 <%= f.radio_button :is_valid, true %> </p>
-         <p> 無効 <%= f.radio_button :is_valid, false %> </p>
+         有効 <%= f.radio_button :is_valid, true %>
+         無効 <%= f.radio_button :is_valid, false %> 
          <%= f.submit '追加', class:"btn btn-info btn-md" %>
       </div>
 <% end %>
@@ -15,6 +15,7 @@
         <tr>
            <th>ジャンル名</th>
            <th>ジャンルステータス</th>
+           <th></th>
         </tr>
         <% @genres.each do |genre| %>
             <tr>
