--- a/app/views/member/orders/confirm.html.erb
+++ b/app/views/member/orders/confirm.html.erb
@@ -1,101 +1,102 @@
-    <div class=row>
-        <div class="col-xs-12 col-xs-offset-1">
-            <h1 style="width:360px">注文情報確認</h1>
-        </div>
-    </div>
+<div class=row>
+<div class="col-xs-12 col-xs-offset-1">
+    <h1 style="width:360px">注文情報確認</h1>
+</div>
+</div>
 
-    <div class="row">
-        <div class="col-xs-6 col-xs-offset-1">
-            <!--購入商品テーブル-->
-            <table class="table table-hover table-bordered" style="font-size: 12pt; line-height: 100%; ">
-                <thead>
-                    <tr class="active">
-                        <th style="width:300px; height:60px">商品名</th>
-                        <th style="width:100px">単価（税込）</th>
-                        <th style="width:100px">数量</th>
-                        <th style="width:100px">小計</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% @cart_products.each do |cart_product| %>
-                        <tr>
-                            <td  style="height:60px">
-                                <p>画像が入る？</p>
-                                <%= cart_product.product.name %>
-                            </td>
-                            <td><%= number_to_currency(cart_product.product.price * @tax, :format => "%u%n", :unit => "￥", :precision => 0) %></td>
-                            <td><%= cart_product.quantity %></td>
-                            <td><%= number_to_currency(cart_product.product.price*cart_product.quantity * @tax, :format => "%u%n", :unit => "￥", :precision => 0) %></td>
-                        </tr>
-                    <% end %>
-                </tbody>
-            </table>
-        </div>
-        <!--金額テーブル-->
-        <div class="col-xs-2 col-xs-offset-0" style="font-size: 12pt; line-height: 100%; ">
-            <table class="table table-hover table-bordered" style="font-size: 12pt; line-height: 100%; ">
-                <tbody>
-                    <tr>
-                        <th class="active" style="width:100px; height:60px">送料</th>
-                        <td style="width:100px"><%= number_to_currency(@postage, :format => "%u%n", :unit => "￥", :precision => 0) %></td>
-                    </tr>
-                    <tr>
-                        <th class="active" style="height:60px">商品合計</th>
-                        <td><%= number_to_currency(@cart_products.map{ |cp| (cp.product.price*cp.quantity * @tax).round }.sum, :format => "%u%n", :unit => "￥", :precision => 0) %></td>
-                    </tr>
-                    <tr>
-                        <th class="active" style="height:60px">請求金額</th>
-                        <td><%= number_to_currency(@cart_products.map{ |cp| (cp.product.price*cp.quantity * @tax).round }.sum + @postage, :format => "%u%n", :unit => "￥", :precision => 0) %></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-    <!--注文情報-->
-    <div class="row">
-        <div class="col-xs-11 col-xs-offset-1 " >
-        <table BORDER='0' style="font-size: 14pt; line-height: 150%; ">
+<div class="row">
+<div class="col-xs-6 col-xs-offset-1">
+    <!--購入商品テーブル-->
+    <table class="table table-hover table-bordered" style="font-size: 12pt; line-height: 100%; ">
+        <thead>
+            <tr class="active">
+                <th style="width:300px; height:60px">商品名</th>
+                <th style="width:100px">単価（税込）</th>
+                <th style="width:100px">数量</th>
+                <th style="width:100px">小計</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% @cart_products.each do |cart_product| %>
+                <tr>
+                    <td  style="height:60px">
+                        <p><%= attachment_image_tag cart_product.product, :image, size: '100x80', fallback:"no_image.jpg",size:'100x80' %></p>
+                        <%= cart_product.product.name %>
+                    </td>
+                    <td><%= number_to_currency(cart_product.product.price * @tax, :format => "%u%n", :unit => "￥", :precision => 0) %></td>
+                    <td><%= cart_product.quantity %></td>
+                    <td><%= number_to_currency(cart_product.product.price*cart_product.quantity * @tax, :format => "%u%n", :unit => "￥", :precision => 0) %></td>
+                </tr>
+            <% end %>
+        </tbody>
+    </table>
+</div>
+<!--金額テーブル-->
+<div class="col-xs-2 col-xs-offset-0" style="font-size: 12pt; line-height: 100%; ">
+    <table class="table table-hover table-bordered" style="font-size: 12pt; line-height: 100%; ">
+        <tbody>
             <tr>
-                <th style="width:150px; height:90px">お支払い方法</th>
-                <td style="width:800px" >
-                    <% case @order.payment_option %>
-                    <% when "credit_card" %>
-                        <%= "クレジットカード" %>
-                    <% when "bank_transfer" %>
-                        <%= "銀行振込" %>
-                    <% end %>
-                </td>
+                <th class="active" style="width:100px; height:60px">送料</th>
+                <td style="width:100px"><%= number_to_currency(@postage, :format => "%u%n", :unit => "￥", :precision => 0) %></td>
             </tr>
             <tr>
-                <th  style="height:90px">お届け先</th>
-                <td  style="width:360px">
-                    <%=  @order.postal_code %>
-                    <%= @order.address %><br>
-                    <%= @order.receiver %>
-                </td>
+                <th class="active" style="height:60px">商品合計</th>
+                <td><%= number_to_currency(@cart_products.map{ |cp| (cp.product.price*cp.quantity * @tax).round }.sum, :format => "%u%n", :unit => "￥", :precision => 0) %></td>
             </tr>
-        </table>
-        </div>
-    </div>
-    <!--保存ボタン-->
-    <div class="row">
-        <%= form_for(@order, url:orders_path) do |f| %>
+            <tr>
+                <th class="active" style="height:60px">請求金額</th>
+                <td><%= number_to_currency(@cart_products.map{ |cp| (cp.product.price*cp.quantity * @tax).round }.sum + @postage, :format => "%u%n", :unit => "￥", :precision => 0) %></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+</div>
+<!--注文情報-->
+<div class="row">
+<div class="col-xs-11 col-xs-offset-1 " >
+<table BORDER='0' style="font-size: 14pt; line-height: 150%; ">
+    <tr>
+        <th style="width:150px; height:90px">お支払い方法</th>
+        <td style="width:800px" >
+            <% case @order.payment_option %>
+            <% when "credit_card" %>
+                <%= "クレジットカード" %>
+            <% when "bank_transfer" %>
+                <%= "銀行振込" %>
+            <% end %>
+        </td>
+    </tr>
+    <tr>
+        <th  style="height:90px">お届け先</th>
+        <td  style="width:360px">
+            <%=  @order.postal_code %>
+            <%= @order.address %><br>
+            <%= @order.receiver %>
+        </td>
+    </tr>
+</table>
+</div>
+</div>
+<!--保存ボタン-->
+<div class="row">
+<%= form_for(@order, url:orders_path) do |f| %>
 
-            <%= f.hidden_field :member_id, :value => current_member.id %>
-            <!--支払い方法-->
-            <%= f.hidden_field :payment_option, :value => @order.payment_option %>
-            <!--お届け先-->
-            <%= f.hidden_field :postal_code, :value =>  @order.postal_code %>
-            <%= f.hidden_field :address, :value =>  @order.address %>
-            <%= f.hidden_field :receiver, :value =>  @order.receiver %>
-            <!--送料、請求金額-->
-            <%= f.hidden_field :postage, :value => @postage %>
-            <%= f.hidden_field :billing, :value => @cart_products.map{ |cp| (cp.product.price*cp.quantity * @tax) }.sum.round + @postage %>
+    <%= f.hidden_field :member_id, :value => current_member.id %>
+    <!--支払い方法-->
+    <%= f.hidden_field :payment_option, :value => @order.payment_option %>
+    <!--お届け先-->
+    <%= f.hidden_field :postal_code, :value =>  @order.postal_code %>
+    <%= f.hidden_field :address, :value =>  @order.address %>
+    <%= f.hidden_field :receiver, :value =>  @order.receiver %>
+    <!--送料、請求金額-->
+    <%= f.hidden_field :postage, :value => @postage %>
+    <%= f.hidden_field :billing, :value => @cart_products.map{ |cp| (cp.product.price*cp.quantity * @tax) }.sum.round + @postage %>
 
-            <%= f.hidden_field :radio_number, :value =>@order.radio_number %>
-            <!--ボタン-->
-            <div class="col-xs-2 col-xs-offset-2">
-                <%= f.submit "注文を確定する", class: "btn btn-success btn-lg" %>
-            </div>
-        <% end %>
+    <%= f.hidden_field :radio_number, :value =>@order.radio_number %>
+    <!--ボタン-->
+    <div class="col-xs-2 col-xs-offset-2">
+        <%= f.submit "注文を確定する", class: "btn btn-success btn-lg" %>
     </div>
+<% end %>
+</div>
+____________________
