--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,11 @@
 <footer class="footer navbar navbar-fixed-bottom navbar-inverse" style="background-color:#3d2c26;color: #fff;">
   <div class="container">
-    <nav class="text-center">
-      <ul class="nav navbar-nav navbar-right footer-title">
-        <li>ご利用規約</li>
-        <li>ご利用ガイド</li>
-        <li>よくある質問</li>
-        <li>お問い合わせ</li>
+    <nav>
+      <ul class="nav navbar-nav footer-navi row" style="width: 100%">
+        <li class="col-xs-3">ご利用規約</li>
+        <li class="col-xs-3">ご利用ガイド</li>
+        <li class="col-xs-3">よくある質問</li>
+        <li class="col-xs-3">お問い合わせ</li>
       </ul>
     </nav>
   </div>
