admin/product/form_for-fix

--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -13,8 +13,7 @@
 
     <table class="table">
         <tr>
-           <th>ジャンル名</th>
-           <th>ジャンルステータス</th>
+           <th>商品ID</th>
            <th></th>
         </tr>
         <% @genres.each do |genre| %>
