--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -6,7 +6,7 @@
  
    <%= f.attachment_field :image, class: "image" %>
 
-   <h4>商品名</h4>
+   <h4>title</h4>
    <%= f.text_field :name, class:"form-control" %>
 
    <h4>商品説明</4>
@@ -16,7 +16,7 @@
    <%= f.collection_select :genre_id, Genre.all, :id, :name %>
 
    <h4>税抜価格</h4>
-   <%= f.text_field :price, class:"form-control" %>円
+   <%= f.number_field :price, class:"form-control" %>円
    
    <h4>販売ステータス</h4>
    有効 <%= f.radio_button :is_valid, true %> 
