--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,6 +55,33 @@ body{
 	padding: 120px 0;
 }
 
+.welcome {
+  height: 400px;
+  margin-left: 10px;
+  background-image: url(sweet-2651110_1920.jpg);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.welcome-message {
+  width: 60%;
+  height: 60%;
+  background-color: rgba( 0, 0, 0, 0.5);
+  text-align: center;
+  padding-top: 70px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+}
+
+.welcome-message p {
+  color: #fff;
+}
+
 .btn-plus {
 	border-radius: 50%;
     padding: 5px 10px;
