--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
         </nav>
       </div>
       <div class="col-xs-9" style="height:100px;">
-        <nav class="clearfix" style="line-height: 100px;">
+        <nav class="clearfix" style="line-height: 100px;font-size: 15px;">
           <ul class="nav navbar-nav navbar-right header-navi">
             <% if admin_signed_in? %>
               <li><%= link_to "商品一覧", admin_products_path %></li>
@@ -26,8 +26,6 @@
               <li><%= link_to "カート", cart_products_path %></li>
               <li><%= link_to "ログアウト", destroy_member_session_path, method: :delete %></li>
             <% else %>
-              <li><%= link_to 'Login(admin)', new_admin_session_path %></li>
-              <!-- ↑消す -->
               <li><%= link_to '商品一覧', products_path %></li>
               <li><%= link_to '新規登録', new_member_registration_path %></li>
               <li><%= link_to 'ログイン', new_member_session_path %></li>
