--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Reset password</h1>
+<h1>新しいパスワードを作成</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
@@ -6,13 +6,13 @@
 
       <%= hidden_field_tag :email, @member.email %>
 
-      <%= f.label :password %>
+      <%= f.label :password, "パスワード(6文字以上)" %>
       <%= f.password_field :password, class: 'form-control' %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label :password_confirmation, "パスワード(確認用)" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit "Update password", class: "btn btn-primary" %>
+      <%= f.submit "パスワードを更新する", class: "btn btn-default" %>
     <% end %>
   </div>
 </div>
