--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,26 +1,30 @@
 <h1>商品新規登録</h1>
 
 <%= render 'layouts/error.message', model: @product %>
+<div class="row">
+    <%= form_for @product, url: admin_products_path, method: :post, class: "form-control" do |f| %>
+    <div class="col-xs-3"> 
+       <%= attachment_image_tag @product, :image, size: '300x240', fallback:"no_image.jpg",size:'300x240' %>
+       <%= f.attachment_field :image, class: "image" %>
+    </div>
+   <div class=" col-xs-offset-1 col-xs-8">
+      <h4>title</h4>
+      <%= f.text_field :name, class:"form-control" %>
 
-<%= form_for @product, url: admin_products_path, method: :post, class: "form-control" do |f| %>
- 
-   <%= f.attachment_field :image, class: "image" %>
+      <h4>商品説明</4>
+      <%= f.text_area :introduction, class:"form-control" %>
 
-   <h4>title</h4>
-   <%= f.text_field :name, class:"form-control" %>
+      <h4>商品ジャンル</h4>
+      <%= f.collection_select :genre_id, Genre.all, :id, :name %>
 
-   <h4>商品説明</4>
-   <%= f.text_area :introduction, class:"form-control" %>
-
-   <h4>商品ジャンル</h4>
-   <%= f.collection_select :genre_id, Genre.all, :id, :name %>
-
-   <h4>税抜価格</h4>
-   <%= f.number_field :price,min:1, class:"form-control" %>円
+      <h4>税抜価格</h4>
+      <%= f.number_field :price,min:1, class:"form-control" %>円
    
-   <h4>販売ステータス</h4>
-   有効 <%= f.radio_button :is_valid, true %> 
-   無効 <%= f.radio_button :is_valid, false %> 
+      <h4>販売ステータス</h4>
+      有効 <%= f.radio_button :is_valid, true %> 
+      無効 <%= f.radio_button :is_valid, false %> 
 
-   <%= f.submit "新規登録", class:"btn btn-lg btn-block btn-base-1 mt-20" %>
+      <%= f.submit "新規登録", class:"btn btn-lg btn-block btn-base-1 mt-20" %>
+   </div>
+</div>
 <% end %>
