--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -30,7 +30,7 @@
               <% if @product.is_valid == true %>
               <td> 販売中 </td>
               <% else %>
-              <td> 販売停止中 </td>
+              <td> 売り切れ </td>
               <% end %>
             </tr>
           </table>
