--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -18,11 +18,11 @@
       <%= f.collection_select :genre_id, Genre.all, :id, :name %>
 
       <h4>税抜価格</h4>
-      <%= f.number_field :price,min:1, class:"form-control" %>円
+      <%= f.number_field :price,min:1, class:"form-horizontal" %>円
    
       <h4>販売ステータス</h4>
-      有効 <%= f.radio_button :is_valid, true %> 
-      無効 <%= f.radio_button :is_valid, false %> 
+      販売中 <%= f.radio_button :is_valid, true %> 
+      売り切れ <%= f.radio_button :is_valid, false %> 
 
       <%= f.submit "新規登録", class:"btn btn-lg btn-block btn-base-1 mt-20" %>
    </div>
